--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   </head>
   <body>
     <main>
-      <p>
-        Apri la console dagli strumenti di sviluppo per verificare le tue
-        risposte o scoprire eventuali errori!
-      </p>
+      <p>Apri la console dagli strumenti di sviluppo per verificare le tue risposte o scoprire eventuali errori!</p>
     </main>
     <script src="D1.js"></script>
   </body>
